[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-color-convert"
version = "0.2.0"
description = "Convert between color formats: hex, RGB, HSL, HSV, CMYK, and named CSS colors"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["color", "convert", "hex", "rgb", "hsl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-color-convert#readme"
Repository = "https://github.com/philiprehberger/py-color-convert"
Issues = "https://github.com/philiprehberger/py-color-convert/issues"
Changelog = "https://github.com/philiprehberger/py-color-convert/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_color_convert"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
